A feature so you can use wooden wand and //up command

--- a/NinjaEdit/plugin.yml
+++ b/NinjaEdit/plugin.yml
@@ -20,3 +20,6 @@ commands:
    /redo:
       description: Redo stuff
       usage: //redo
+   /up:
+      description: Go up.
+      usage: //up <value> 
